Updated data sync system